# app_builder_local

./: .gitignore  PRD.md  README.md  SPRINT_PLAN.md  docker-compose.dev.yml
.claude/: CLAUDE.md  settings.json
.claude/agents/: backend.md  frontend.md
.progress/: S1.md  S2.md  S3.md  S4.md  S5.md  S6.md  TOTAL_REQUEST.md
backend/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 75f00afb943a_create_initial_tables.py
backend/app/: main.py
backend/app/core/: agent_runner.py  config.py  crypto.py  error_handlers.py  ws_manager.py
backend/app/database/: __init__.py  session.py
backend/app/models/: __init__.py  agent_log.py  agent_task.py  base.py  chat_message.py  flow_node.py  project.py  setting.py  token_usage.py
backend/app/routers/: agent_tasks.py  chat.py  cost.py  docker.py  flow_nodes.py  planning.py  projects.py  settings.py  sprint.py  websocket.py
backend/app/schemas/: agent_task.py  chat.py  cost.py  docker.py  flow_node.py  planning.py  project.py  settings.py  sprint.py
backend/app/services/: agent_task_service.py  chat_service.py  cost_service.py  docker_service.py  flow_node_service.py  planning_service.py  project_service.py  sprint_service.py  token_service.py
backend/tests/: conftest.py  test_agent_runner.py  test_agent_tasks_api.py  test_chat_api.py  test_cost_api.py  test_crypto.py  test_docker_api.py  test_docker_service.py  test_e2e_flow.py  test_error_handlers.py  test_flow_nodes.py  test_health.py  test_models.py  test_planning_api.py  test_planning_service.py  test_projects_api.py  test_services.py  test_settings_api.py  test_sprint_api.py  test_sprint_service.py  test_websocket.py
common/: plan_form.md  plan_phase.md
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AgentTabBar.tsx  ApprovalBar.tsx  ChatLogPanel.tsx  ChatPanel.tsx  ConfirmDialog.tsx  CostTracker.tsx  CreateProjectModal.tsx  (+15 more)
projects/test/: idea.md
projects/ㅅㄷㄴ/: idea.md
(+19 files in other folders)
