[project]
name = "app-builder-backend"
version = "0.1.0"
description = "App Builder Local - FastAPI Backend"
authors = [
    {name = "kknaks"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi (>=0.115.0,<1.0.0)",
    "uvicorn[standard] (>=0.30.0,<1.0.0)",
    "sqlalchemy[asyncio] (>=2.0.30,<3.0.0)",
    "asyncpg (>=0.29.0,<1.0.0)",
    "alembic (>=1.13.0,<2.0.0)",
    "pydantic (>=2.7.0,<3.0.0)",
    "pydantic-settings (>=2.3.0,<3.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "cryptography (>=42.0.0,<48.0.0)",
    "httpx (>=0.27.0,<1.0.0)",
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.0.0,<10.0.0)",
    "pytest-asyncio (>=0.23.0,<2.0.0)",
    "httpx (>=0.27.0,<1.0.0)",
    "ruff (>=0.4.0,<1.0.0)",
    "aiosqlite (>=0.20.0,<1.0.0)",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
